# mathswe-ops---mvp

./: README.md
ops.math.software---mvp/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ops.math.software---mvp/src/: info.tsx
ops.math.software---mvp/src/app/: App.css  App.tsx  Footer.tsx  main.tsx
ops.math.software---mvp/src/app/assets/: msw-engineer.css
ops.math.software---mvp/src/app/main/: Header.css  Header.tsx  Heading.tsx  Main.css  Main.tsx
ops.math.software---mvp/src/app/main/ops/: Ops.tsx  Swam.css  Swam.tsx
ops.math.software---mvp/src/app/main/ops/mathswe/: MathSwe.css  MathSwe.tsx
ops.math.software---mvp/src/app/main/ops/system/: System.css  (+1 more)
ops.math.software---mvp/src/app/main/system/: System.tsx
system/: Cargo.toml  README.md
system/image/: clion.json  datagrip.json  git.config.json  goland.json  gradle.json  intellij-idea.json  java.json  jetbrains-toolbox.json  miniconda.config.json  miniconda.json  node.json  phpstorm.json  pycharm.json  rider.json  rubymine.json  rustrover.json  vscode.json  webstorm.json
system/resources/test/download/: test_file.txt
system/resources/test/image/: zoom.json
system/src/: cmd.rs  download.rs  image.rs  main.rs  os.rs  package.rs  resources.rs  system.rs  tmp.rs
system/src/download/: download.rs  gpg.rs  hashing.rs  mod.rs
system/src/image/: desktop.rs  images.rs  repository.rs  server.rs
system/src/main/: batch.rs  cli.rs  exec.rs  image_exec.rs  system.rs
system/src/package/: packages.rs
system/src/tmp/: mod.rs
(+2 files in other folders)
