[package]
name = "system"
version = "0.1.0-dev"
edition = "2021"
description = "It automates software operations in Linux, such as installation, uninstallation, and configuration, allowing you to set up server VMs and desktop Workstations by running a command."
readme = "README.md"
license = "GPL-3"
homepage = "https://ops.math.software#system"
repository = "https://github.com/mathswe-ops/mathswe-ops---mvp/tree/main/system"
authors = ["Tobias Briones"]

[dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
sha2 = "0.10.8"
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
